[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darts>=0.35.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
]
